--- a/quiz-maker/WebContent/administrator/header.xhtml
+++ b/quiz-maker/WebContent/administrator/header.xhtml
@@ -26,7 +26,7 @@
 					<p:menuitem value="Dashboard" outcome="adminpage" icon="ui-icon-home">
 						<f:param name="i" value="2" />
 					</p:menuitem>
-					<p:menuitem value="Questions" action="#{questionBean.getPage}" icon="ui-icon-help" >
+					<p:menuitem value="Questions" outcome="question" icon="ui-icon-help" >
 						<f:param name="i" value="3" />
 					</p:menuitem>
 					<p:menuitem value="Categories" outcome="category" icon="ui-icon-document" >
