--- a/quiz-maker/WebContent/user/user-header.xhtml
+++ b/quiz-maker/WebContent/user/user-header.xhtml
@@ -30,7 +30,7 @@
 						<f:param name="i" value="3" />
 					</p:menuitem>
 					
-					<p:menuitem value="ABOUT"  icon="ui-icon-person">
+					<p:menuitem value="ABOUT"  outcome="about" icon="ui-icon-person">
 				  		<f:param name="i" value="4" />
 					</p:menuitem>
 					
