--- a/quiz-maker/WebContent/administrator/header.xhtml
+++ b/quiz-maker/WebContent/administrator/header.xhtml
@@ -26,19 +26,19 @@
 					<p:menuitem value="Dashboard" outcome="adminpage" icon="ui-icon-home">
 						<f:param name="i" value="2" />
 					</p:menuitem>
-					<p:menuitem value="Questions" outcome="question" icon="ui-icon-help" >
+					<p:menuitem value="Questions" action="#{questionBean.getPage}"  icon="ui-icon-help" >
 						<f:param name="i" value="3" />
 					</p:menuitem>
-					<p:menuitem value="Categories" outcome="category" icon="ui-icon-document" >
+					<p:menuitem value="Categories" action="#{categoryBean.getPage}"  icon="ui-icon-document" >
 						<f:param name="i" value="4" />
 					</p:menuitem>
-					<p:menuitem value="Users" outcome="user" icon="ui-icon-person">
+					<p:menuitem value="Users" action="#{userBean.getPage}"  icon="ui-icon-person">
 						<f:param name="i" value="5" />
 					</p:menuitem>
 					<p:menuitem value="Setting" outcome="settingAdmin" icon="ui-icon-setting">
 						<f:param name="i" value="6" />
 					</p:menuitem>
-					<p:menuitem value="ABOUT"  icon="ui-icon-person">
+					<p:menuitem value="ABOUT" outcome="about" icon="ui-icon-person">
 				  		<f:param name="i" value="7" />
 					</p:menuitem>
 					<p:menuitem value="Log Out" action="#{loginBean.logout}" icon="ui-icon-key">
