--- a/quiz-maker/WebContent/administrator/userUpdate.xhtml
+++ b/quiz-maker/WebContent/administrator/userUpdate.xhtml
@@ -31,7 +31,9 @@
 							<p:outputLabel value="Password:" for="password" />
 							<p:password id="password" required="true" value="#{userBean.user.password}" requiredMessage="*required"   /> 
 							<p:message for="password" />
-							<h:commandButton action="#{userBean.update}" value="Update"  /> </h:panelGrid>
+							
+							<h:commandButton action="#{userBean.update}" value="Update"  /> 
+						</h:panelGrid>
 					</p:tab>
 					
 				</h:form>
